# CreativeProgramming

./: .dockerignore  .gitignore  makefile
.github/workflows/: client.yaml  deploy.yaml  server.yaml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.vue
client/src/assets/: base.scss  main.scss
client/src/components/: GroupList.vue  PageContainer.vue  PageHeader.vue  PageTitle.vue  ScheduleInput.vue  ScheduleList.vue  SignUp.vue
client/src/lib/: param.ts
client/src/lib/apis/: index.ts
client/src/router/: index.ts
client/src/styles/: color.scss
client/src/views/: GroupPage.vue  MyPage.vue  NotFound.vue  SignUp.vue  TopPage.vue
dockerfiles/: Dockerfile  compose.yaml  prod.Dockerfile  server.Dockerfile  swagger.Dockerfile
docs/: openapi.yaml  schema.sql
server/: Cargo.toml
server/app/: Cargo.toml
server/app/src/: db.rs  handler.rs  main.rs  repository.rs
server/app/src/repository/: group_schedules.rs  user_groups.rs  user_passwords.rs  user_sessions.rs
server/src/: main.rs
