[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
openapi = { path = "../apis/" }
axum-extra = "0.9.3"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio", "uuid", "migrate"] }
once_cell = "1.19.0"
uuid = { version = "1.8.0", features = ["v7"] }
tower-http = {version = "0.5.2", features = ["fs"]}
bcrypt = "0.15.1"
